apps/base/productivity/uptime-kuma/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-service
spec:
  selector:
    app: uptime-kuma-deployment
  ports:
    - name: http
      port: 3001
      targetPort: 3001
      protocol: TCP
