apps/base/productivity/uptime-kuma/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`uptime-kuma.local.${DOMAIN}`)
      kind: Rule
      middlewares:
        - name: authelia-forward-auth
          namespace: network-system
      services:
        - name: uptime-kuma-service
          port: 3001
  tls:
    certResolver: letsencrypt
